--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tenzies!</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Press+Start+2P&family=Fira+Code&family=Karla:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"> 
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="index.pack.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
